--- a/Thesis/kaft.tex
+++ b/Thesis/kaft.tex
@@ -2,8 +2,9 @@
 \usepackage{graphicx} %pakket voor includeren figuren
 \usepackage{epsfig}
 \usepackage{simplemargins}
+\usepackage{charter}
 
-\setlength{\smpagewidth}{21cm}         % breedte blad
+%\setlength{\smpagewidth}{22cm}         % breedte blad
 %\setlength{\headwidth}{16cm}		   % breedte hoofding
 \setlength{\smpageheight}{29.7cm}      % hoogte blad
 %\setlength{\headheight}{3cm}		   % hoogte hoofding
